# sdat-tools

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  dist-workspace.toml  rustfmt.toml
src/: error.rs  img2sdat.rs  install.rs  main.rs  sdat2img.rs  tlist.rs  ui.rs
